fixed some bugs

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Science+Gothic:wght@100..900&display=swap" rel="stylesheet">
-    <title>School Attendance System</title>
     <link rel="stylesheet" href="style.css">
+    <title>School Attendance System</title>
 </head>
 <body>
     <div class="container">
@@ -76,7 +76,9 @@
                     <input type="text" id="studentAddress" placeholder="Student Address" />
                 </div>
                 
-                <button type="submit" class="btn">Mark Attendance</button>
+                <button type="submit" class="btn">
+                    Mark Attendance
+                </button>
             </form>
             <p id="errorP"></p>
         </div>
